; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcs_fcpim.c_bfa_fcs_itnim_delete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcs_fcpim.c_bfa_fcs_itnim_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_fcs_itnim_s = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@BFA_FCS_ITNIM_SM_DELETE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bfa_fcs_itnim_delete(%struct.bfa_fcs_itnim_s* %0) #0 {
  %2 = alloca %struct.bfa_fcs_itnim_s*, align 8
  store %struct.bfa_fcs_itnim_s* %0, %struct.bfa_fcs_itnim_s** %2, align 8
  %3 = load %struct.bfa_fcs_itnim_s*, %struct.bfa_fcs_itnim_s** %2, align 8
  %4 = getelementptr inbounds %struct.bfa_fcs_itnim_s, %struct.bfa_fcs_itnim_s* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 8
  %6 = load %struct.bfa_fcs_itnim_s*, %struct.bfa_fcs_itnim_s** %2, align 8
  %7 = getelementptr inbounds %struct.bfa_fcs_itnim_s, %struct.bfa_fcs_itnim_s* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @bfa_trc(i32 %5, i32 %10)
  %12 = load %struct.bfa_fcs_itnim_s*, %struct.bfa_fcs_itnim_s** %2, align 8
  %13 = load i32, i32* @BFA_FCS_ITNIM_SM_DELETE, align 4
  %14 = call i32 @bfa_sm_send_event(%struct.bfa_fcs_itnim_s* %12, i32 %13)
  ret void
}

declare dso_local i32 @bfa_trc(i32, i32) #1

declare dso_local i32 @bfa_sm_send_event(%struct.bfa_fcs_itnim_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
